  RS232 or MIDI debug print enabled. (RFB)

2012-02-05
- desk/deskmain.c desk/desk_rsc.h: Renamed & moved two resource-related
  #defines into resource header. (RFB)
- desk/deskbind.h: Get number of trees in resource from resource header. (RFB)
- desk/aesbind.h desk/deskmain.c desk/gembind.c: Replace menu_text() with
  macro to avoid problems when original object string is in ROM. (RFB)
- desk/deskmain.c: Fixed latent bug when menu isn't first tree in
  resource. (RFB)

2012-02-08
- bios/xhdi.c: Better XHNewCookie() support. Contributed by David Galvez. (VRI)
- bios/xhdi.c: Fixed when not CONF_WITH_XHDI. (VRI)

2012-02-09
- desk/desktop.dfn desk/desktop.rsc: Updated raw resource files to correspond
  to the current C code in desk_rsc.c/desk_rsc.h. (RFB)
- doc/resource.txt tools/erd.c: Added documentation & source for resource
  decompilation tool. (RFB)

2012-02-10
- doc/resource.txt tools/erd.c: Changed tabs to spaces, crlf to lf. (RFB)
- desk/desk_rsc.c po/cs.po po/de.po po/es.po po/fi.po po/fr.po po/gr.po
  po/it.po po/ru.po: Removed trailing spaces from 'Desktop info...' string
  for compatibility with erd. (RFB)
- tools/erd.c: Fixed ctype warnings on Cygwin. (VRI)
- .cvsignore Makefile: Build the erd tool using "make erd". (VRI)
- desk/deskbind.h desk/deskmain.c: Code cleanup: removed unused FCB
  structures from GLOBES. (RFB)

2012-02-11
- desk/*: Removed all unnecessary #includes from all files within the desk
  directory. (RFB)
- desk/deskapp.c desk/deskfpd.c desk/deskmain.c desk/desksupp.c
  desk/deskwin.c: Restored some #includes required for 'make 192'. (RFB)
- desk/deskact.c desk/deskbind.h desk/deskconf.h: Code cleanup: centralised
  #define for MAX_OBS. (RFB)
- desk/deskbind.h desk/deskconf.h: Code cleanup: centralised #define for
  MAX_LEVEL. (RFB)
- desk/infodef.h: Code cleanup: removed unused #defines. (RFB)

2012-02-12
- doc/status.txt: Updated to reflect implementation of TT & Falcon xbios
  video calls. (RFB)