@@ -32,4 +32,7 @@
 
 #define MAX_LEVEL   8               /* max directory depth supported by the desktop */
 
+#define LEN_FNODE   45              /* total length of highlighted text in window */
+                                    /*  for selected files in "show as text" mode */
+
 #endif  /* _DESKCONF_H */
